--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app='myapp'>
+
 <head>
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
 
+</head>
+
+<body ng-controller="HomeController as vm">
+    {{343/34}}
+    <div>
+        {{vm.title}}
+    </div>
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="app.js"></script>
 </body>
+
+
 </html>
